# Generated by Django 6.0.5 on 2026-05-25 22:53

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('medico', '0001_initial'),
        ('paciente', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Anamnese',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('data_criacao', models.DateTimeField(auto_now_add=True, verbose_name='Data de criação')),
                ('alergias', models.TextField(verbose_name='Alergias')),
                ('alcool', models.CharField(choices=[('NAO', 'Não consome'), ('EVE', 'Eventual'), ('DIA', 'Diário')], default='NAO', max_length=3, verbose_name='Consumo de álcool')),
                ('fumante', models.CharField(choices=[('NAO', 'Não consome'), ('EVE', 'Eventual'), ('DIA', 'Diário')], default='NAO', max_length=3, verbose_name='Fumante')),
                ('medicamentos', models.TextField(verbose_name='Medicamentos em uso')),
                ('queixa_principal', models.TextField(verbose_name='Queixa principal')),
                ('medico', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='medico.medico', verbose_name='Médico')),
                ('paciente', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='paciente.paciente', verbose_name='Paciente')),
            ],
            options={
                'verbose_name': 'Anamnese',
                'verbose_name_plural': 'Anamneses',
            },
        ),
    ]
