# Generated by Django 6.0.5 on 2026-05-25 22:52

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('pessoa', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Medico',
            fields=[
                ('pessoa_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='pessoa.pessoa')),
                ('crm', models.CharField(max_length=20, unique=True, verbose_name='CRM')),
                ('especialidade', models.CharField(default='Clinico Geral', max_length=200, verbose_name='Especialidade')),
                ('matricula', models.CharField(max_length=20, unique=True, verbose_name='Matrícula')),
                ('data_contratacao', models.DateField(verbose_name='Data de contratação')),
                ('cargo', models.CharField(max_length=50, verbose_name='Cargo')),
                ('esta_ativo', models.BooleanField(default=True, verbose_name='Está ativo')),
            ],
            options={
                'verbose_name': 'Médico',
                'verbose_name_plural': 'Médicos',
            },
            bases=('pessoa.pessoa',),
        ),
    ]
