# Generated by Django 6.0.5 on 2026-05-25 22:52

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('pessoa', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Paciente',
            fields=[
                ('pessoa_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='pessoa.pessoa')),
                ('data_nascimento', models.DateField(verbose_name='Data de nascimento')),
                ('peso', models.FloatField(verbose_name='Peso (kg)')),
                ('altura', models.FloatField(verbose_name='Altura (m)')),
                ('endereco', models.CharField(max_length=200, verbose_name='Endereço completo')),
            ],
            options={
                'verbose_name': 'Paciente',
                'verbose_name_plural': 'Pacientes',
            },
            bases=('pessoa.pessoa',),
        ),
    ]
